--- a/photo-management-app/src/styles/global.css
+++ b/photo-management-app/src/styles/global.css
@@ -1,4 +1,3 @@
-/* Reset default browser styles */
 * {
   margin: 0;
   padding: 0;
@@ -6,10 +5,12 @@
 }
 
 body {
-  font-family: "Arial", sans-serif;
-  background-color: #f4f4f4;
+  font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #ffffff;
   height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
