--- a/photo-management-app/src/styles/login.css
+++ b/photo-management-app/src/styles/login.css
@@ -4,12 +4,19 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/background.jpg");
+  background-image: url("../assets/images/background.png");
   background-size: cover;
   background-position: center;
-  opacity: 0.5;
 }
-
+.background::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
 .login-container {
   position: relative;
   z-index: 10;
