--- a/photo-management-app/src/styles/login.css
+++ b/photo-management-app/src/styles/login.css
@@ -5,6 +5,7 @@
   height: 100vh;
   width: 100vw;
   position: relative;
+  overflow: hidden; /* Prevents overflow of background */
 }
 
 .background {
@@ -26,7 +27,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.5); /* Increased opacity for a stronger filter */
+  /* Optional: add a blur effect */
+  backdrop-filter: blur(2px); /* Adjust the blur value as needed */
+  z-index: 1; /* Ensure it overlays the background */
 }
 
 .login-container {
@@ -37,24 +41,24 @@
   border-radius: 12px;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
   width: 720px;
-  height: 900px;
+  height: 700px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .login-container h2 {
   font-size: 28px;
   font-weight: 600;
   color: #000;
-  margin-bottom: 8px;
 }
 
 .login-container p {
   color: #666;
   font-size: 16px;
-  margin-bottom: 24px;
 }
 
 .google-login {
@@ -119,7 +123,7 @@
 
 .login-btn {
   width: 80%;
-  margin: 0 auto;
+  margin: 10px auto;
   background-color: #666a7a;
   color: white;
   padding: 14px;
@@ -135,7 +139,7 @@
 }
 
 .signup {
-  margin-top: 15px;
+  margin-top: 10px;
   font-size: 14px;
   color: #666;
 }
@@ -147,4 +151,30 @@
 
 .signup a:hover {
   text-decoration: underline;
+}
+.check-register {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  margin: 10px auto;
+  margin-bottom: 10px;
+}
+.register-form {
+  height: 50%;
+  margin-top: 10px;
+}
+.register-btn {
+  width: 80%;
+  margin: 10px auto;
+  background-color: #666a7a;
+  color: white;
+  padding: 14px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  font-size: 16px;
+}
+.register-btn:hover {
+  background-color: #565a6a;
 }
